--- a/templates/admin_dashboard/admin_dashboard.html.twig
+++ b/templates/admin_dashboard/admin_dashboard.html.twig
@@ -40,19 +40,23 @@
         <p>Cette section est consacrée à la personnalisation et la gestion de la charte graphique du site</p>
         <div class="couleur-btn">
             <div class="hex-btn">
-                <input type="color" name="background_color" value="{{background_color}}"/>
+                <input type="color" name="background_color" value={{ parametres.getParametre("background_color") }} />
                 <label>Couleur d'arrière plan</label>
             </div>
             <div class="hex-btn">
-                <input type="color" name="utility_button" value="{{utility_button}}"/>
+                <input type="color" name="primary_color" value={{ parametres.getParametre("primary_color") }} />
+                <label>Couleur Principale</label>
+            </div>
+            <div class="hex-btn">
+                <input type="color" name="utility_button" value={{ parametres.getParametre("utility_button") }} />
                 <label>Couleur Boutons Contextuels</label>
             </div>
             <div class="hex-btn">
-                <input type="color" name="warning_button" value="{{warning_button}}"/>
+                <input type="color" name="warning_button" value={{ parametres.getParametre("warning_button") }} />
                 <label>Couleur Boutons Importants</label>
             </div>
             <div class="hex-btn">
-                <input type="color" name="login_background_color" value="{{login_background_color}}"/>
+                <input type="color" name="login_background_color" value={{ parametres.getParametre("login_background_color") }} />
                 <label>Couleur Arrière plan du Login</label>
             </div>
         </div>
@@ -64,7 +68,4 @@
         {{ message }}
     </div>
 {% endfor %}
-
-
-
 {% endblock %}
